--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body{
     left: -90%;
     /* left: 0; */
     width: 100%;
-    background: #0c0c7e;
+    background: #010114;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,10 +216,92 @@ body{
     min-width: 100vw;
 }
 
-/* .quiz-section, .quiz-box{
-    /* position: relative; 
+.quiz-section .Quiz-box{
+    position: relative; 
     width: 500px;
     background: transparent;
-    border: 2px solid #00008b;
+    border: 2px solid #fff;
     border-radius: 6px;
-} */
+    flex-direction: column;
+    padding: 20px 30px;
+
+} 
+
+.Quiz-box h1{
+    font-size: 32px;
+    text-align: center;
+    background: linear-gradient(45deg,transparent,#1313b8,transparent);
+    border-radius: 6px;
+}
+
+
+.Quiz-box .quiz-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    border-bottom: 2px solid #00008b;
+}
+
+.quiz-header span{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.quiz-header .header-score{
+    background: #1313b8;
+    border-radius: 3px;
+    padding: 7px;
+}
+
+.Quiz-box .question-text{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.option-list .option{
+    width: 100%;
+    padding: 12px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.801);
+    border-radius: 4px;
+    font-size: 17px;
+    margin: 15px 0;
+    cursor: pointer;
+
+}
+
+.option-list .option:hover{
+    background: rgba(255, 255, 255, 0.39);
+    border-color: rgba(255, 255, 255, 0.459);
+}
+
+.Quiz-box .quiz-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.quiz-footer .question-total{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.quiz-footer .next-btn{
+    width: 100px;
+    height: 45px;
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: rgba(255, 255, 255, .3);
+    font-weight: 600;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.quiz-footer .next-btn:hover{
+    background: #1313b8;
+    border-color: #1313b8;
+}
