--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ body{
     align-items: center;
     padding: 20px 0;
     border-bottom: 2px solid #00008b;
+    margin-bottom: 30px;
 }
 
 .quiz-header span{
@@ -280,6 +281,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: 2px solid #1313b8;
+    padding-top: 20px;
+    margin-top: 25px;
 }
 
 .quiz-footer .question-total{
