--- a/style.css
+++ b/style.css
@@ -282,6 +282,22 @@ body{
 
 }
 
+.option-list .option.correct{
+    background: #09001d;
+    color: #00a63d;
+    border-color: #00a63d;
+}
+
+.option-list .option.incorrect{
+    background: #09001d;
+    color: #a60045;
+    border-color: #a60045;
+}
+
+.option-list .option.disabled{
+    pointer-events: none;
+}
+
 .option-list .option:hover{
     background: rgba(255, 255, 255, 0.39);
     border-color: rgba(255, 255, 255, 0.459);
@@ -312,10 +328,19 @@ body{
     color: rgba(255, 255, 255, .3);
     font-weight: 600;
     cursor: pointer;
+    pointer-events: none;
     transition: .5s;
 }
 
-.quiz-footer .next-btn:hover{
+
+.quiz-footer .next-btn.active{
+    pointer-events: auto;
+    background:  #1313b8;
+    border-color: #1313b8;
+    color: #fff;
+}
+
+.quiz-footer .next-btn.active:hover{
     background: #1313b8;
     border-color: #1313b8;
 }
