--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ body{
 .quiz-section{
     position: relative;
     left: -90%;
-    /* left: 0; */
+    /* left: 30%; */
     width: 100%;
     background: #010114;
     display: flex;
@@ -227,6 +227,8 @@ body{
     opacity: 0;
     pointer-events: none;
     transform: scale(.9);
+    transition: .3s ease;
+    transition-delay: 0s;
 } 
 
 .quiz-section .Quiz-box.active{
@@ -343,4 +345,104 @@ body{
 .quiz-footer .next-btn.active:hover{
     background: #1313b8;
     border-color: #1313b8;
+}
+
+.quiz-section .result-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(.9);
+    width: 500px;
+    background: transparent;
+    border: 2px solid #1313b8;
+    border-radius: 6px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: .3s ease;
+}
+
+.quiz-section .result-box.active{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(.9);
+}
+
+.result-box h2{
+    font-size: 52px;
+}
+
+.result-box .percentage-container{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 40px;
+}
+
+.percentage-container .circular-progress{
+    position: relative;
+    width: 250px;
+    height: 250px;
+    background: conic-gradient(#00008b, 3.6deg,rgba(255,255,255,.1) 0deg);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.percentage-container .circular-progress::before{
+    content: '';
+    position: absolute;
+    width: 210px;
+    height: 210px;
+    background: #09001d;
+    border-radius: 50%;
+}
+
+.circular-progress .progress-value{
+    position: relative;
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.percentage-container .score-text{
+    font-size: 26px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.result-box .buttons{
+    display: flex;
+}
+.buttons button{
+    width: 130px;
+    height: 47px;
+    background: #00008b;
+    border: 2px solid #1313b8;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+}
+
+.buttons button:nth-child(1):hover{
+    background: #00008b;
+    border-color: #00008b;
+}
+
+.buttons button:nth-child(2){
+    background: transparent;
+    color: #00008b;
+}
+.buttons button:nth-child(2):hover{
+    background: #00008b;
+    color: #fff;
+    transition: .5s;
 }
